--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,14 @@
 }
 
 .grid {
-    display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    max-width: 700px; /* ≈ 5 cards * 140px + gap */
     gap: 20px;
+    margin-top: 20px;
     width: 100%;
-    max-width: 1000px;
-}
+  }
+  
 
 
 
@@ -22,6 +24,8 @@
     font-size: 2.5em;
     -webkit-text-stroke-color: black;
     -webkit-text-stroke-width: 1px;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -58,5 +62,11 @@ body {
   .card p {
     font-size: 1rem;
     color: #9fe870;
+    word-break: break-word;
+    white-space: normal;
+    overflow-wrap: break-word;
+    max-width: 100%;
+    
   }
+  
   
